--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body {
+    background-color: #121212;
+    color: white;
+}
+span {
+    color: black;
+}
 h1 {
     text-align: center;
     margin-top: 2em;
